fixed contrast issues

--- a/src/App.css
+++ b/src/App.css
@@ -80,16 +80,16 @@ footer {
   background-image: linear-gradient(
     to right,
     #4500c9,
-    #5219c9,
-    #5e28c9,
-    #6835c8,
-    #7141c8,
-    #7242c9,
-    #7443cb,
-    #7544cc,
-    #6f3ad0,
-    #692fd3,
-    #6323d7,
+    #4700ae,
+    #450093,
+    #40007a,
+    #390363,
+    #3a0464,
+    #3b0566,
+    #3c0667,
+    #460682,
+    #4f079e,
+    #560bbb,
     #5b11da
   );
   padding: 20px 5px;
